Fix knex.js issue

--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
         "prom-client": "~13.2.0",
         "prometheus-api-metrics": "~3.2.1",
         "protobufjs": "~7.1.1",
-        "redbean-node": "0.1.4",
+        "redbean-node": "~0.2.0",
         "socket.io": "~4.5.3",
         "socket.io-client": "~4.5.3",
         "socks-proxy-agent": "6.1.1",
