--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
         "jsonwebtoken": "~9.0.0",
         "jwt-decode": "~3.1.2",
         "limiter": "~2.1.0",
-        "mongodb": "^4.12.0",
+        "mongodb": "~4.13.0",
         "mqtt": "~4.3.7",
         "mssql": "~8.1.4",
         "mysql2": "~2.3.3",
