Revert "Merge branch 'master' into toast-notification-timeout-setting"
This reverts commit f2dd673df4baf33843d56dddeffabbfe8280f33d, reversing
changes made to 68ea5f9c3fb5517b967779ed915dacf287b64fb2.

--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -1,9 +1,19 @@
 ############################################
 # Build in Golang
 # Run npm run build-healthcheck-armv7 in the host first, another it will be super slow where it is building the armv7 healthcheck
-# Check file: builder-go.dockerfile
 ############################################
-FROM louislam/uptime-kuma:builder-go AS build_healthcheck
+FROM golang:1.19.4-buster AS build_healthcheck
+WORKDIR /app
+ARG TARGETPLATFORM
+COPY ./extra/ ./extra/
+
+# Compile healthcheck.go
+RUN apt update
+RUN apt --yes --no-install-recommends install curl
+RUN curl -sL https://deb.nodesource.com/setup_18.x | bash
+RUN apt --yes --no-install-recommends install nodejs
+RUN node -v
+RUN node ./extra/build-healthcheck.js $TARGETPLATFORM
 
 ############################################
 # Build in Node.js
@@ -12,13 +22,10 @@ FROM louislam/uptime-kuma:base-debian AS build
 WORKDIR /app
 
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=1
-COPY .npmrc .npmrc
-COPY package.json package.json
-COPY package-lock.json package-lock.json
-RUN npm ci --omit=dev
 COPY . .
 COPY --from=build_healthcheck /app/extra/healthcheck /app/extra/healthcheck
-RUN chmod +x /app/extra/entrypoint.sh
+RUN npm ci --production && \
+    chmod +x /app/extra/entrypoint.sh
 
 ############################################
 # ⭐ Main Image
