--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
         "cy:run": "npx cypress run --browser chrome --headless --config-file ./config/cypress.config.js",
         "cy:run:unit": "npx cypress run --browser chrome --headless --config-file ./config/cypress.frontend.config.js",
         "cypress-open": "concurrently -k -r \"node test/prepare-test-server.js && node server/server.js --port=3002 --data-dir=./data/test/\" \"cypress open --config-file ./config/cypress.config.js\"",
-        "build-healthcheck-armv7": "cross-env GOOS=linux GOARCH=arm GOARM=7 go build -x -o ./extra/healthcheck-armv7 ./extra/healthcheck.go"
+        "build-healthcheck-armv7": "cross-env GOOS=linux GOARCH=arm GOARM=7 go build -x -o ./extra/healthcheck-armv7 ./extra/healthcheck.go",
+        "test-i18n-list": "node extra/check-i18n-list.js"
     },
     "dependencies": {
         "@grpc/grpc-js": "~1.7.3",
