--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
         "jsesc": "~3.0.2",
         "jsonwebtoken": "~9.0.0",
         "jwt-decode": "~3.1.2",
+        "knex": "^2.4.2",
         "limiter": "~2.1.0",
         "mongodb": "~4.13.0",
         "mqtt": "~4.3.7",
@@ -148,8 +149,8 @@
         "eslint": "~8.14.0",
         "eslint-plugin-vue": "~8.7.1",
         "favico.js": "~0.3.10",
-        "marked": "~4.2.5",
         "jest": "~27.2.5",
+        "marked": "~4.2.5",
         "postcss-html": "~1.5.0",
         "postcss-rtlcss": "~3.7.2",
         "postcss-scss": "~4.0.4",
