--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
         "cy:run": "npx cypress run --browser chrome --headless --config-file ./config/cypress.config.js",
         "cy:run:unit": "npx cypress run --browser chrome --headless --config-file ./config/cypress.frontend.config.js",
         "cypress-open": "concurrently -k -r \"node test/prepare-test-server.js && node server/server.js --port=3002 --data-dir=./data/test/\" \"cypress open --config-file ./config/cypress.config.js\"",
-        "build-healthcheck-armv7": "cross-env GOOS=linux GOARCH=arm GOARM=7 go build -x -o ./extra/healthcheck-armv7 ./extra/healthcheck.go"
+        "build-healthcheck-armv7": "cross-env GOOS=linux GOARCH=arm GOARM=7 go build -x -o ./extra/healthcheck-armv7 ./extra/healthcheck.go",
+        "depoly-demo-server": "node extra/deploy-demo-server.js"
     },
     "dependencies": {
         "@grpc/grpc-js": "~1.7.3",
@@ -150,8 +151,9 @@
         "eslint": "~8.14.0",
         "eslint-plugin-vue": "~8.7.1",
         "favico.js": "~0.3.10",
-        "marked": "~4.2.5",
         "jest": "~27.2.5",
+        "marked": "~4.2.5",
+        "node-ssh": "~13.0.1",
         "postcss-html": "~1.5.0",
         "postcss-rtlcss": "~3.7.2",
         "postcss-scss": "~4.0.4",
