--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -71,7 +71,7 @@ RUN npm ci
 
 EXPOSE 3000 3001
 VOLUME ["/app/data"]
-HEALTHCHECK --interval=60s --timeout=30s --start-period=180s --retries=5 CMD node extra/healthcheck.js
+HEALTHCHECK --interval=60s --timeout=30s --start-period=180s --retries=5 CMD extra/healthcheck
 CMD ["npm", "run", "start-pr-test"]
 
 ############################################
