--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,7 +5,7 @@ version: '3.3'
 
 services:
   uptime-kuma:
-    image: louislam/uptime-kuma:1
+    image: docker.io/louislam/uptime-kuma:1
     container_name: uptime-kuma
     volumes:
       - ./uptime-kuma-data:/app/data
