--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
         "mqtt": "~4.3.7",
         "mssql": "~8.1.4",
         "mysql2": "~2.3.3",
+        "oracledb": "~5.5.0",
         "node-cloudflared-tunnel": "~1.0.9",
         "node-radius-client": "~1.0.0",
         "nodemailer": "~6.6.5",
